# tmdb_movies_data_analysis

./: .gitignore  EDA_movies.ipynb  EDA_movies_(1).ipynb  README.md  football_transfers_EDA.ipynb  main.py  pyproject.toml  tp_grupo_9_movies (2).ipynb  tp_grupo_9_movies.ipynb  utils.ipynb
